--- a/force-app/main/default/classes/Mocks.cls
+++ b/force-app/main/default/classes/Mocks.cls
@@ -26,6 +26,9 @@ public class Mocks {
         return '{ "response": "[detail-successfully-disabled]" }';
     }
 
+    public static String mockPaymentsResponseRedirect() {
+        return '{ "resultCode": "RedirectShopper", "action": { "paymentData": "Ab02b4c0..", "paymentMethodType": "scheme", "url": "https://test.adyen.com/hpp/3d/validate.shtml", "data": { "MD": "WVllVjg..", "PaReq": "eNpVUtt..", "TermUrl": "https://www.adyen.com" }, "method": "POST", "type": "redirect" }, "details": [{ "key": "MD", "type": "text" }, { "key": "PaRes", "type": "text" } ], "paymentData": "Ab02b4c..", "redirect": { "data": { "PaReq": "eNpVUtt..", "TermUrl": "https://www.adyen.com", "MD": "WVllVjg.." }, "method": "POST", "url": "https://test.adyen.com/hpp/3d/validate.shtml" } }';
+    }
 
 
     public class AdyenPaymentsSuccessMock implements HttpCalloutMock {
@@ -86,5 +89,48 @@ public class Mocks {
             res.setStatusCode(200);
             return res;
         }
+    }
+
+    public class AdyenPaymentsRedirectMock implements HttpCalloutMock {
+        public HTTPResponse respond(HTTPRequest req) {
+            HttpResponse res = new HttpResponse();
+            res.setHeader('Content-Type', 'text/json');
+            res.setBody(mockPaymentsResponseRedirect());
+            res.setStatusCode(200);
+            return res;
+        }
+    }
+
+    public class AdyenCaptureSuccessMock implements HttpCalloutMock {
+        public HTTPResponse respond(HTTPRequest req) {
+            HttpResponse res = new HttpResponse();
+            res.setHeader('Content-Type', 'text/json');
+            res.setBody(JSON.serialize(mockCaptureResponse()));
+            res.setStatusCode(200);
+            return res;
+        }
+    }
+
+    public class AdyenCaptureErrorMock implements HttpCalloutMock {
+        public HTTPResponse respond(HTTPRequest req) {
+            HttpResponse res = new HttpResponse();
+            res.setHeader('Content-Type', 'text/json');
+            Error err = new Error();
+            err.errorCode = '400';
+            err.errorType = 'validation';
+            err.message = 'Original pspReference required for this operation';
+            err.status = 400;
+            res.setBody(JSON.serialize(err));
+
+            res.setStatusCode(400);
+            return res;
+        }
+    }
+
+    public static CaptureResponse mockCaptureResponse() {
+        CaptureResponse resp = new CaptureResponse();
+        resp.pspReference = 'abcd1234';
+        resp.response = '[capture-received]';
+        return resp;
     }
 }
