Fixed PW-5140 and Fix for 0Auth when no products in the cart

--- a/force-app/main/default/classes/AdyenPaymentsDetails.cls
+++ b/force-app/main/default/classes/AdyenPaymentsDetails.cls
@@ -9,6 +9,7 @@ public with sharing class AdyenPaymentsDetails {
         PaymentsDetailsRequest paymentsDetailsRequest = new PaymentsDetailsRequest();
         paymentsDetailsRequest.details = details;
         //Get saved payment data from cart
+        if(cart != null)
         paymentsDetailsRequest.paymentData = cart.AdyenPaymentData__c;
         return callPaymentsDetails(paymentsDetailsRequest);
     }
