Edits For 2GP Package Creation

--- a/force-app/main/default/classes/AdyenPaymentsDetails.cls
+++ b/force-app/main/default/classes/AdyenPaymentsDetails.cls
@@ -18,7 +18,7 @@ public with sharing class AdyenPaymentsDetails {
     public static PaymentsResponse callPaymentsDetails(PaymentsDetailsRequest request){
         PaymentsResponse paymentsDetailsResponse = new PaymentsResponse();
         Merchant__mdt merchant = Util.getConfigByName('AdyenMerchantConfig');
-        AdyenClient client = new AdyenClient('{!$Credential.Password}', 'callout:AdyenPaymentsDetailsAPI');
+        AdyenClient client = new AdyenClient('{!$Credential.Password}', 'callout:adyen_payment__AdyenPaymentsDetailsAPI');
         String jsonString = JSON.serialize(request, true);
         jsonString = Util.makeAdyenCompatible(jsonString);
         HttpResponse httpResponse = client.request(client.config, jsonString);
